Add tests and fixes for plugin security files