@@ -21,9 +21,11 @@ import java.security.PermissionCollection;
 import java.security.Permissions;
 import java.security.ProtectionDomain;
 import java.security.cert.Certificate;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
+import java.util.Set;
+
+import static java.util.Map.entry;
 
 /**
  * Unit tests for ESPolicy: these cannot run with security manager,
@@ -47,7 +49,7 @@ public class ESPolicyUnitTests extends ESTestCase {
         Permission all = new AllPermission();
         PermissionCollection allCollection = all.newPermissionCollection();
         allCollection.add(all);
-        ESPolicy policy = new ESPolicy(TEST_CODEBASES, allCollection, Collections.emptyMap(), true, List.of(), List.of(), Map.of());
+        ESPolicy policy = new ESPolicy(TEST_CODEBASES, allCollection, Map.of(), true, List.of(), List.of(), Map.of());
         // restrict ourselves to NoPermission
         PermissionCollection noPermissions = new Permissions();
         assertFalse(policy.implies(new ProtectionDomain(null, noPermissions), new FilePermission("foo", "read")));
@@ -60,7 +62,7 @@ public class ESPolicyUnitTests extends ESTestCase {
     public void testNullLocation() throws Exception {
         assumeTrue("test cannot run with security manager", System.getSecurityManager() == null);
         PermissionCollection noPermissions = new Permissions();
-        ESPolicy policy = new ESPolicy(TEST_CODEBASES, noPermissions, Collections.emptyMap(), true, List.of(), List.of(), Map.of());
+        ESPolicy policy = new ESPolicy(TEST_CODEBASES, noPermissions, Map.of(), true, List.of(), List.of(), Map.of());
         assertFalse(
             policy.implies(
                 new ProtectionDomain(new CodeSource(null, (Certificate[]) null), noPermissions),
@@ -72,7 +74,7 @@ public class ESPolicyUnitTests extends ESTestCase {
     public void testListen() {
         assumeTrue("test cannot run with security manager", System.getSecurityManager() == null);
         final PermissionCollection noPermissions = new Permissions();
-        final ESPolicy policy = new ESPolicy(TEST_CODEBASES, noPermissions, Collections.emptyMap(), true, List.of(), List.of(), Map.of());
+        final ESPolicy policy = new ESPolicy(TEST_CODEBASES, noPermissions, Map.of(), true, List.of(), List.of(), Map.of());
         assertFalse(
             policy.implies(
                 new ProtectionDomain(ESPolicyUnitTests.class.getProtectionDomain().getCodeSource(), noPermissions),
@@ -87,7 +89,7 @@ public class ESPolicyUnitTests extends ESTestCase {
         final ESPolicy policy = new ESPolicy(
             TEST_CODEBASES,
             new Permissions(),
-            Collections.emptyMap(),
+            Map.of(),
             true,
             List.of(new FilePermission("/home/elasticsearch/data/-", "read")),
             List.of(),
@@ -112,7 +114,7 @@ public class ESPolicyUnitTests extends ESTestCase {
         ESPolicy policy = new ESPolicy(
             TEST_CODEBASES,
             coll,
-            Collections.emptyMap(),
+            Map.of(),
             true,
             List.of(),
             List.of(new FilePermission("/home/elasticsearch/config/forbidden.yml", "read")),
@@ -125,5 +127,62 @@ public class ESPolicyUnitTests extends ESTestCase {
 
         assertTrue(policy.implies(pd, new FilePermission("/home/elasticsearch/config/config.yml", "read")));
         assertFalse(policy.implies(pd, new FilePermission("/home/elasticsearch/config/forbidden.yml", "read")));
+    }
+
+    @SuppressForbidden(reason = "to create FilePermission object")
+    public void testPluginExclusiveAccess() {
+        assumeTrue("test cannot run with security manager", System.getSecurityManager() == null);
+
+        String file1 = "/home/elasticsearch/config/pluginFile1.yml";
+        URL codebase1 = randomFrom(TEST_CODEBASES.values());
+        String file2 = "/home/elasticsearch/config/pluginFile2.yml";
+        URL codebase2 = randomValueOtherThan(codebase1, () -> randomFrom(TEST_CODEBASES.values()));
+        String dir1 = "/home/elasticsearch/config/pluginDir/";
+        URL codebase3 = randomValueOtherThanMany(Set.of(codebase1, codebase2)::contains, () -> randomFrom(TEST_CODEBASES.values()));
+        URL otherCodebase = randomValueOtherThanMany(
+            Set.of(codebase1, codebase2, codebase3)::contains,
+            () -> randomFrom(TEST_CODEBASES.values())
+        );
+
+        ESPolicy policy = new ESPolicy(
+            TEST_CODEBASES,
+            new Permissions(),
+            Map.of(),
+            true,
+            List.of(),
+            List.of(),
+            Map.ofEntries(
+                entry(file1, Set.of(codebase1.getFile())),
+                entry(file2, Set.of(codebase1.getFile(), codebase2.getFile())),
+                entry(dir1 + "*", Set.of(codebase3.getFile()))
+            )
+        );
+
+        ProtectionDomain nullDomain = new ProtectionDomain(new CodeSource(null, (Certificate[]) null), new Permissions());
+        ProtectionDomain codebase1Domain = new ProtectionDomain(new CodeSource(codebase1, (Certificate[]) null), new Permissions());
+        ProtectionDomain codebase2Domain = new ProtectionDomain(new CodeSource(codebase2, (Certificate[]) null), new Permissions());
+        ProtectionDomain codebase3Domain = new ProtectionDomain(new CodeSource(codebase3, (Certificate[]) null), new Permissions());
+        ProtectionDomain otherCodebaseDomain = new ProtectionDomain(new CodeSource(otherCodebase, (Certificate[]) null), new Permissions());
+
+        Set<String> actions = Set.of("read", "write", "read,write", "delete", "read,write,execute,readlink,delete");
+
+        assertFalse(policy.implies(nullDomain, new FilePermission(file1, randomFrom(actions))));
+        assertFalse(policy.implies(otherCodebaseDomain, new FilePermission(file1, randomFrom(actions))));
+        assertTrue(policy.implies(codebase1Domain, new FilePermission(file1, randomFrom(actions))));
+        assertFalse(policy.implies(codebase2Domain, new FilePermission(file1, randomFrom(actions))));
+        assertFalse(policy.implies(codebase3Domain, new FilePermission(file1, randomFrom(actions))));
+
+        assertFalse(policy.implies(nullDomain, new FilePermission(file2, randomFrom(actions))));
+        assertFalse(policy.implies(otherCodebaseDomain, new FilePermission(file2, randomFrom(actions))));
+        assertTrue(policy.implies(codebase1Domain, new FilePermission(file2, randomFrom(actions))));
+        assertTrue(policy.implies(codebase2Domain, new FilePermission(file2, randomFrom(actions))));
+        assertFalse(policy.implies(codebase3Domain, new FilePermission(file2, randomFrom(actions))));
+
+        String dirFile = dir1 + "file.yml";
+        assertFalse(policy.implies(nullDomain, new FilePermission(dirFile, randomFrom(actions))));
+        assertFalse(policy.implies(otherCodebaseDomain, new FilePermission(dirFile, randomFrom(actions))));
+        assertFalse(policy.implies(codebase1Domain, new FilePermission(dirFile, randomFrom(actions))));
+        assertFalse(policy.implies(codebase2Domain, new FilePermission(dirFile, randomFrom(actions))));
+        assertTrue(policy.implies(codebase3Domain, new FilePermission(dirFile, randomFrom(actions))));
     }
 }
